--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,8 @@
   },
   "homepage": "https://github.com/ClarkF704/react_e_shop#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "concurrently": "^6.4.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15"
   }
 }
