--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ClarkF704/react_e_shop#readme",
   "dependencies": {
     "concurrently": "^6.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
   }
